added and ran security tests
